--- a/_locales/zh/mbridge-strings.json
+++ b/_locales/zh/mbridge-strings.json
@@ -1,10 +1,10 @@
 {
-    "mbridge.Ultrasonic|block": "超声波|port %port",
-    "mbridge.DHT11|block": "DHT11|port %port|类型 %readtype",
-    "mbridge.LightSensor|block": "亮度传感器|port %port",
-    "mbridge.SoundSensor|block": "声音传感器|port %port",
-    "mbridge.Potentiometer|block": "电位器|port %port",
-    "mbridge.Tracer|block": "巡线|Port %port|传感器 %slot",
+    "mbridge.Ultrasonic|block": "超声波|%port",
+    "mbridge.DHT11|block": "DHT11|%port|类型 %readtype",
+    "mbridge.LightSensor|block": "亮度传感器|%port",
+    "mbridge.SoundSensor|block": "声音传感器|%port",
+    "mbridge.Potentiometer|block": "电位器|%port",
+    "mbridge.Tracer|block": "巡线|%port|传感器 %slot",
     "mbridge.onTracerEvent|block": "当巡线|%port|传感器 %slot 碰到黑线",
     "mbridge.onPIREvent|block": "当PIR|%port 感应到热源",
     "mbridge.PIR|block": "PIR|%port 感应热源",
